--- a/20220406/blog_list.html
+++ b/20220406/blog_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> about_me | 데일리남의 웹사이트 </title>
+        <title> blog | 데일리남의 웹사이트 </title>
     </head>
     <body>
         <nav>
@@ -17,8 +17,8 @@
 
         </nav>
         
-        <h1>About me</h1>
-        <h2>새롭고 재미난 거 좋아하는 데일리남입니다</h2>
+        <h1>Blog</h1>
+        <h2>ai의 대한 이야기를 다루고 있는 데일리남 블로그입니다</h2>
         
 
         <p>현재 AI를 배우고 있고 AI/IT 강의도 하고 있습니다.</p>
