--- a/20220406/index.html
+++ b/20220406/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title> 데일리남의 웹사이트 </title>
+        <style>
+            nav {background-color: cornsilk; font-size: 150%;}
+            nav a {color: gold}
+        </style>
     </head>
     <body>
         <nav>
@@ -9,9 +13,9 @@
             <a href="./index.html">DailyMan</a>
             <a href="https://cafe.naver.com/wbclass">강의실</a>
             <a href="https://blog.naver.com/85honesty">Naver Blog</a>                       
-            <a href="https://www.youtube.com/c/dailyman%EB%8D%B0%EC%9D%BC%EB%A6%AC%EB%82%A8/featured">유튜브</a>            
-            <a href="https://www.youtube.com/c/dailyman%EB%8D%B0%EC%9D%BC%EB%A6%AC%EB%82%A8/videos">유튜브 동영상 목록</a>
-            <a href="./blog.list.html">Blog</a>
+            <a href="https://www.youtube.com/c/dailyman%EB%8D%B0%EC%9D%BC%EB%A6%AC%EB%82%A8/featured" style="color: aqua;">유튜브</a>            
+            <a href="https://www.youtube.com/c/dailyman%EB%8D%B0%EC%9D%BC%EB%A6%AC%EB%82%A8/videos" style="color: aqua;"> 유튜브 동영상 목록</a>
+            <a href="./blog_list.html">Blog</a>
             <a href="./about_me.html">About me</a>
             <hr/>            
 
