--- a/20220406/index.html
+++ b/20220406/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title> 데일리남의 웹사이트 </title>
-        <style>
-            nav {background-color: cornsilk; font-size: 150%;}
-            nav a {color: gold}
+        <style>            
+            nav {background-color: cornsilk; font-size: 150%; text-align: center;}
+            nav a {color: gold}            
         </style>
     </head>
     <body>
