--- a/20220406/blog_list.html
+++ b/20220406/blog_list.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <title> blog | 데일리남의 웹사이트 </title>
-        <style>
-            nav {background-color: cornsilk; font-size: 150%; text-align: center;}
-            nav a {color: gold}
-        </style>
+        <link href="./practice.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav>
