--- a/20220406/index.html
+++ b/20220406/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> 데일리남의 웹사이트 </title>
-        <style>            
-            nav {background-color: cornsilk; font-size: 150%; text-align: center;}
-            nav a {color: gold}            
-        </style>
+        <title> 데일리남의 웹사이트 </title>   
+        <link href="./practice.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav>
