--- a/20220406/about_me.html
+++ b/20220406/about_me.html
@@ -14,6 +14,7 @@
             <a href="https://www.youtube.com/c/dailyman%EB%8D%B0%EC%9D%BC%EB%A6%AC%EB%82%A8/videos">유튜브 동영상 목록</a>
             <a href="./blog_list.html">Blog</a>
             <a href="./about_me.html">About me</a>
+            <a href="./number.html">Number</a>
             <hr/>   
 
         </nav>
